added CFR+ to clairvoyance and half_street

--- a/.gitignore
+++ b/.gitignore
@@ -170,6 +170,7 @@ cython_debug/
 
 # Generated artifacts
 plots/
+notebooks/artifacts/
 
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
